--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@
 /JavaApplication12/build/
 /numImpar/nbproject/private/
 /numImpar/build/
+/decrescente/nbproject/private/
+/decrescente/build/
+/JavaApplication15/nbproject/private/
+/JavaApplication15/build/
+/mult3/nbproject/private/
+/mult3/build/
